arreglo footer y paddin

--- a/css/compra-tickets.css
+++ b/css/compra-tickets.css
@@ -10,9 +10,9 @@
   background-color: #a6dcfd;
 }
 
-
+/*
 @media screen and (min-width:940px){
   .main{
     height: calc(100vh - 80px - 120px);
   }
-}
+}*/
